creusot/tests/should_fail/bug/211.stderr
error[E0004]: non-exhaustive patterns: `E::B` and `E::C` not covered
  --> 211.rs:10:11
   |
10 |     match s.0 {
   |           ^^^ patterns `E::B` and `E::C` not covered
   |
note: `E` defined here
  --> 211.rs:3:5
   |
1  | pub enum E {
   |          -
2  |     A,
3  |     B,
   |     ^ not covered
4  |     C,
   |     ^ not covered
   = note: the matched value is of type `E`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
11 ~         E::A => {},
12 +         E::B | E::C => todo!()
   |

thread 'rustc' panicked at 'called `Option::unwrap()` on a `None` value', creusot/src/backend/ty_inv.rs:438:87
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

note: Creusot has panic-ed!
  |
  = note: Oops, that shouldn't have happened, sorry about that.
  = note: Please report this bug over here: https://github.com/xldenis/creusot/issues/new

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
